generate marker input

--- a/archieve/extractFish.ipynb
+++ b/archieve/extractFish.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,16 +10,9 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from skimage import morphology\n",
+    "import imageio\n",
+    "from myfunc import clip_background,cv2plot,set_borders_zero,resize_by_ratio,morph_line\n",
     "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from myfunc import clip_background,cv2plot,set_borders_zero,resize_by_ratio,morph_line"
    ]
   },
   {
@@ -31,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +33,8 @@
     "# SMED30033119\n",
     "# SMED30021202\n",
     "# 参考了https://blog.csdn.net/weixin_44524040/article/details/90350701\n",
-    "# 不过我稍微改了一下绿色的比例。。"
+    "# 不过我稍微改了一下绿色的比例。。\n",
+    "# !ls *.jpg"
    ]
   },
   {
@@ -322,9 +316,9 @@
     }
    ],
    "source": [
-    "import imageio\n",
     "im = new_rnd+new_d_im\n",
-    "imageio.imsave('res/{}.jpg'.format(myselect), im)"
+    "imageio.imsave('chk/{}.jpg'.format(myselect), im)\n",
+    "imageio.imsave('res/{}.jpg'.format(myselect), new_rnd)"
    ]
   },
   {
