generate marker input

--- a/pre-precessing.ipynb
+++ b/pre-precessing.ipynb
@@ -130,7 +130,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stderr",
