generate marker input

--- a/mynovosparc.ipynb
+++ b/mynovosparc.ipynb
@@ -273,14 +273,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Setting up for reconstruction ... "
+      "Setting up for reconstruction ... done ( 437.26 seconds )\n"
      ]
     }
    ],
@@ -290,9 +290,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reconstructing spatial information with 23 markers: 11566 cells and 3000 locations ... \n",
+      "It.  |Err         \n",
+      "-------------------\n",
+      "    0|1.898603e-04|\n"
+     ]
+    }
+   ],
    "source": [
     "tissue.reconstruct(alpha_linear=0, epsilon=5e-3)"
    ]
@@ -301,7 +312,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Setting up Morans I analysis for 2000 genes..."
+     ]
+    }
+   ],
    "source": [
     "tissue.calculate_spatially_informative_genes()"
    ]
