generate marker input

--- a/mynovosparc.ipynb
+++ b/mynovosparc.ipynb
@@ -115,10 +115,11 @@
     "for i in range(9):\n",
     "    myimg = np.load('chk/{}.npy'.format(insitu_genes[i].split('.')[0]))\n",
     "    myloc = locations[myimg==1]\n",
-    "\n",
     "    plt.subplot(1,9,i+1)\n",
-    "    plt.scatter(myloc[:, 0], myloc[:, 1])\n",
+    "    plt.scatter(myloc[:, 0], myloc[:, 1],s=1)\n",
     "    plt.title(insitu_genes[i])\n",
+    "    plt.xlim(0,200)\n",
+    "    plt.ylim(0,500)\n",
     "    plt.axis('off')\n",
     "plt.show()    "
    ]
@@ -130,7 +131,8 @@
    "outputs": [],
    "source": [
     "# subsample the locations to save effort -- low resolution now\n",
-    "seed = np.random.choice(locations.shape[0], 3000)  ### -------- later to select markers   3000  11566\n",
+    "# seed = np.random.choice(locations.shape[0], 11566)  ### -------- later to select markers   3000  11566\n",
+    "seed = [i for i in range(11566)]\n",
     "locations = locations[seed, :]\n",
     "locations.shape"
    ]
