generate marker input

--- a/mynovosparc.ipynb
+++ b/mynovosparc.ipynb
@@ -131,8 +131,7 @@
    "outputs": [],
    "source": [
     "# subsample the locations to save effort -- low resolution now\n",
-    "# seed = np.random.choice(locations.shape[0], 11566)  ### -------- later to select markers   3000  11566\n",
-    "seed = [i for i in range(11566)]\n",
+    "seed = np.random.choice(locations.shape[0], 11566)  ### -------- later to select markers   3000  11566\n",
     "locations = locations[seed, :]\n",
     "locations.shape"
    ]
