--- a/mynovosparc_3D&fake_epi33119.ipynb
+++ b/mynovosparc_3D&fake_epi33119.ipynb
@@ -45,10 +45,10 @@
    "source": [
     "# data_path = 'raw/expr_matrix_10day_log_normalized.txt'   # 11566 cells and 2000 genes\n",
     "# data_path = 'SCTransformed_10day_3000var.genes_pesudocell.txt'\n",
-    "data_path = 'raw/SCTransform_10day_pesudocell_matrix.txt'\n",
+    "# data_path = 'raw/SCTransform_10day_pesudocell_matrix.txt'\n",
     "\n",
     "\n",
-    "# data_path = 'raw/zero_or_one.txt'  # DGE in the form of 0 or 1\n",
+    "data_path = 'raw/zero_or_one.txt'  # DGE in the form of 0 or 1\n",
     "\n",
     "output_folder = 'out'"
    ]
